Closed Bug 1691829 Opened 5 years ago Closed 5 years ago

Cocoa file picker does not specify interfaces for its file enumerators

Categories

(Core :: Widget: Cocoa, defect)

defect

Tracking

()

RESOLVED FIXED
87 Branch
Tracking Status
firefox-esr78 --- wontfix
firefox85 --- wontfix
firefox86 --- wontfix
firefox87 --- fixed

People

(Reporter: kmag, Assigned: kmag)

References

Details

Attachments

(1 file)

Other platforms do, which means that JS callers which don't explicitly query each element are broken only on OS-X.

Without this, JS callers which don't explicitly query every element returned
by the enumerator are broken only on MacOS.

Component: Widget → Widget: Cocoa
Pushed by maglione.k@gmail.com: https://hg.mozilla.org/integration/autoland/rev/1db8a954cd69 Specify interface for nsIFilePicker::files getter on Cocoa. r=mccr8

It looks like the original motivation for this was a bug on Thunderbird based on ESR, so it might be nice to backport this fix if it is appropriate, in case there are other issues lurking there.

It might be nice, yeah, but I think their fix may be enough for those purposes. I think there's only one place in mozilla-central that would be affected by this, but there's an instanceof nsIFile check that makes it work even if the enumerator doesn't return the correct interface.

I was mainly worried about new code that lands and works correctly on automation and most platforms, but then blows up on OS-X when it actually ships.

Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → 87 Branch

The patch landed in nightly and beta is affected.
:kmag, is this bug important enough to require an uplift?
If not please set status_beta to wontfix.

For more information, please visit auto_nag documentation.

Flags: needinfo?(kmaglione+bmo)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: