Bug 1691829: Specify interface for nsIFilePicker::files getter on Cocoa. r=mccr8

Without this, JS callers which don't explicitly query every element returned
by the enumerator are broken only on MacOS.

Differential Revision: https://phabricator.services.mozilla.com/D104580